--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 :root {
+  --primary-dark: #333;
+  --primary-light: #ededed;
+  --secondary-light: #fefefe;
   --number-col-row: 4;
 }
 
@@ -6,6 +9,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Ubuntu", sans-serif;
 }
 
 body {
@@ -20,13 +24,23 @@ body {
   grid-area: drawing;
 }
 
-/* .drawing__name { */
-/* } */
+.drawing__name {
+  padding: 15px;
+  margin-bottom: 20px;
+  text-align: center;
+}
 
 .drawing__board {
   display: grid;
-  grid-template-columns: repeat(var(--number-col-row), calc(100vw / var(--number-col-row)));
-  grid-template-rows: repeat(var(--number-col-row), calc(100vw / var(--number-col-row)));
+  grid-template-columns: repeat(
+    var(--number-col-row),
+    calc(80vw / var(--number-col-row))
+  );
+  grid-template-rows: repeat(
+    var(--number-col-row),
+    calc(80vw / var(--number-col-row))
+  );
+  justify-content: center;
 }
 
 .drawing__board div {
@@ -37,30 +51,58 @@ body {
   grid-area: customizaton;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  margin-top: 25px;
 }
 
 .customization__color {
   -webkit-appearance: none;
   padding: 0;
   border: none;
-  border-radius: 10px;
-  width: 20px;
-  height: 20px;
+  border-radius: 100%;
+  width: 80px;
+  height: 80px;
 }
 
 .customization__color::-webkit-color-swatch {
   border: none;
-  border-radius: 10px;
+  border-radius: 100%;
   padding: 0;
 }
 .customization__color::-webkit-color-swatch-wrapper {
   border: none;
-  border-radius: 10px;
+  border-radius: 100%;
   padding: 0;
 }
 
 .btn {
+  width: 50vw;
+  padding: 20px;
+  border-radius: 8px;
+  border: 1px solid var(--primary-dark);
+  background-color: var(--primary-light);
+  color: var(--primary-dark);
 }
 
-.customization__range {
+.active {
+  background-color: var(--primary-dark);
+  color: var(--primary-light);
+}
+
+.customization__range-container {
+  font-size: 1.4rem;
+  text-align: center;
+}
+
+.footer {
+  margin: 0 auto;
+  font-size: 20px;
+  padding: 10px;
+}
+
+.footer a {
+  list-style: none;
+  text-decoration: none;
+  color: var(--primary-dark);
 }
