--- a/style.css
+++ b/style.css
@@ -37,12 +37,16 @@ body {
   width: 80vw;
   height: 80vw;
   margin: 0 auto;
-  /* border: 1px solid var(--primary-dark); */
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  background-color: white;
 }
 
-.drawing__board {
-  background-color: white;
+.drawing__board div {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
 }
 
 .customization {
